bulma test farringdon foodie dummy page

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,19 @@
 body {
-  background: #f9fafb;
+  background: rgba(246, 237, 237, 0.66);
   font-family: Helvetica, Arial, sans-serif;
   font-size: 30px;
   margin: 0;
   padding: 30px;
 }
+
+.full-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* img {
+  width: 30px;
+  height: 30px;
+  object-fit: cover;
+} */
