--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,21 +5,29 @@ body {
 }
 
 .btn {
-  margin: 0 2px;
+  margin: 2px 2px;
 }
 
 .header {
-  height: 720px;
-  width: 100%;
+  height: auto;
+  width: auto;
   display: block;
   padding-bottom: 20px;
 }
 
 .headerImage {
-  min-height: 600px;
-  background-image: url("assets/images/home-office.png");
+  min-height: 300px;
+  background-image: url("../assets/images/home-office.png");
   background-repeat: no-repeat;
-  background-size: 1280px 720px;
+  background-size: 960px 400px;
   background-position: center;
   /*padding: 40px; (If don't want to set min-height or some image content is there) */
+}
+
+.navbar {
+  padding-top: 5px;
+}
+
+.container {
+  max-width: 960px
 }
