Bare minimum react router, image tweak

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,11 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background:slategrey;
+}
+
+.wrapper {
+  padding: 1em;
 }
 
 .btn {
@@ -21,7 +26,7 @@ body {
   background-repeat: no-repeat;
   background-size: 960px 400px;
   background-position: center;
-  /*padding: 40px; (If don't want to set min-height or some image content is there) */
+  border: 1px solid black;
 }
 
 .navbar {
