--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,24 +8,14 @@ body {
   margin: 2px 2px;
 }
 
-.header {
-  height: auto;
-  width: auto;
-  display: block;
-  padding-bottom: 20px;
-}
-
-.headerImage {
-  min-height: 300px;
-  background-image: url("../assets/images/home-office.png");
-  background-repeat: no-repeat;
-  background-size: 960px 400px;
-  background-position: center;
-  /*padding: 40px; (If don't want to set min-height or some image content is there) */
-}
-
 .navbar {
   padding-top: 5px;
+  text-decoration: none;
+  list-style: none;
+}
+
+.navbar-nav {
+  display: inline-flex;
 }
 
 .container {
